[gd_scene load_steps=4 format=3 uid="uid://dvyoux754os5g"]

[ext_resource type="Script" path="res://ui/world/world_container.gd" id="1_js3cf"]
[ext_resource type="FontFile" uid="uid://clbw7k6jvgucq" path="res://ui/fonts/paul-maillard-font.ttf" id="2_e14ir"]
[ext_resource type="Texture2D" uid="uid://dbus8qdnl0j5j" path="res://ui/icon/icon-quit.png" id="3_o0nor"]

[node name="WorldContainer" type="HBoxContainer"]
offset_right = 430.0
offset_bottom = 54.0
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("1_js3cf")

[node name="WorldNameLbl" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_e14ir")
theme_override_font_sizes/font_size = 25
text = "New world"
horizontal_alignment = 1

[node name="SeedLbl" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_e14ir")
theme_override_font_sizes/font_size = 13
text = "123456789"
horizontal_alignment = 1

[node name="CreatedAtLbl" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_e14ir")
theme_override_font_sizes/font_size = 25
text = "01/01/25
"
horizontal_alignment = 1

[node name="DeleteWorldBtn" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("3_o0nor")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm deletion"
initial_position = 1
size = Vector2i(305, 100)
always_on_top = true
dialog_text = "This world will be deleted for eternity"

[connection signal="pressed" from="DeleteWorldBtn" to="." method="_on_delete_world_btn_pressed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_confirmed"]
